<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:andriod="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    android:fitsSystemWindows="false"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_main_signin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llTopContents"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/ic_login_bg"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btnToolbarBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_logo"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xmedium"
                android:layout_marginRight="@dimen/margin_xmedium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSignInHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/calibri"
                    android:gravity="left"
                    android:text="@string/tv_welcome"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_22sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xmedium"
                android:layout_marginRight="@dimen/margin_xmedium"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvEmailHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibrib"
                        android:text="@string/tv_email"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_15sdp" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/calibri"
                        android:gravity="left"
                        android:hint="@string/tv_email_address"
                        android:inputType="textEmailAddress"
                        android:maxLength="100"
                        android:maxLines="1"
                        android:paddingTop="@dimen/_15sdp"
                        android:paddingBottom="@dimen/_15sdp"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGrayLight"
                        android:textSize="@dimen/_14sdp"
                        android:theme="@style/EditTextTheme" />

                    <TextView
                        android:id="@+id/tvPasswordHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:fontFamily="@font/calibrib"
                        android:text="@string/tv_password"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_15sdp" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/calibri"
                        android:gravity="left"
                        android:hint="@string/tv_password"
                        android:inputType="textPassword"
                        android:maxLength="100"
                        android:maxLines="1"
                        android:paddingTop="@dimen/_15sdp"
                        android:paddingBottom="@dimen/_15sdp"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGrayLight"
                        android:textSize="@dimen/_14sdp"
                        android:theme="@style/EditTextTheme" />

                    <TextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:gravity="right"
                        android:paddingTop="@dimen/_7sdp"
                        android:paddingBottom="@dimen/_7sdp"
                        android:text="@string/tv_forgot_password"
                        android:textColor="#bc000f"
                        android:textSize="@dimen/_14sdp" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/btn_login_selector"
                        android:fontFamily="@font/calibrib"
                        android:gravity="center"
                        android:text="@string/tv_signIn"
                        android:textAllCaps="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xmedium"
                android:layout_marginRight="@dimen/margin_xmedium"
                android:layout_marginBottom="@dimen/margin_default"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTermsAndConditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calibri"
                    android:gravity="center"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:text="@string/tv_terms_conditions"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp" />


                <RelativeLayout
                    android:id="@+id/clkSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvSignInFooter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_45sdp"
                        android:enabled="false"
                        android:fontFamily="@font/calibri"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text="@string/tv_donot_have_sign_up"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_14sdp"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:id="@+id/tvLogInRed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tvSignInFooter"
                        android:enabled="false"
                        android:fontFamily="@font/calibrib"
                        android:text="@string/tv_sign_up"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_14sdp"
                        tools:ignore="MissingPrefix" />
                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/calibrib"
            android:text="@string/txt_skip"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sdp" />

        <FrameLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone">

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/avi"
                style="@style/AVLoadingIndicatorView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:visibility="visible"
                app:indicatorColor="#939393"
                app:indicatorName="LineSpinFadeLoaderIndicator" />

        </FrameLayout>
    </RelativeLayout>
</ScrollView>